# optlrc2018

src/: vstart.sh
src/erasure-code/: CMakeLists.txt  ErasureCode.cc
src/erasure-code/jerasure/: ErasureCodeJerasure.cc
src/erasure-code/lrc/: ErasureCodeLrc.cc
src/erasure-code/optlrc/: CMakeLists.txt  ErasureCodeOptLrc.cc  ErasureCodeOptLrc.h  ErasureCodeOptLrc_configs.h  ErasureCodePluginOptLrc.cc  ErasureCodePluginOptLrc.h  Makefile.am  README.txt
src/erasure-code/optlrc/matlab/: calc_optlrc.m  calc_optlrc2.m  calc_optlrc_coef.m  find_d.m  g_for_r_5.m  gf_16_exp.m  gf_256_exp.m  ppower.m
src/osd/: ECBackend.cc
